using object id refs in db for faster access and linking

--- a/views/index.jade
+++ b/views/index.jade
@@ -9,7 +9,7 @@ html(ng-app='runwayApp')
         link(rel='stylesheet', href='/styles/style.css')
         link(rel='stylesheet', href='/styles/login.css')
         link(rel='stylesheet', href='/styles/home.css')
-        link(rel='stylesheet', href='/styles/workspace.css')
+        link(rel='stylesheet', href='/styles/settings.css')
 
         script(type='text/javascript', src='/node_modules/angular/angular.min.js')
         script(type='text/javascript', src='/node_modules/jquery/dist/jquery.min.js')
