--- a/views/partials/navBar.jade
+++ b/views/partials/navBar.jade
@@ -1,6 +1,6 @@
 nav.navbar.navbar-default.navbar-fixed-top
-    div.container-fluid
-        div.navbar-header
+    .container-fluid
+        .navbar-header
             button.navbar-toggle.collapsed(type='button' data-toggle='collapse' data-target='#bs-example-navbar-collapse-1' aria-expanded='false')
                 span.sr-only
                 span.icon-bar
@@ -26,7 +26,8 @@ nav.navbar.navbar-default.navbar-fixed-top
                     a.dropdown-toggle(data-toggle='dropdown' role='button' aria-haspopup='true' aria-expanded='false') {{username}}
                         span.caret
                     ul.dropdown-menu
-                        //- todo: add account settings
-                        li.divider(role='separator')
                         li
-                            a(ng-click='logout()') Logout
+                            a(ui-sref='home.settings.general') Account Settings
+                        li.divider
+                        li
+                            a(ui-sref='login') Logout
