--- a/views/partials/addGroupModal.jade
+++ b/views/partials/addGroupModal.jade
@@ -5,14 +5,18 @@
     fieldset(ng-disabled='disableModal')
         form.form-horizontal(ng-submit='addGroup()')
             .form-group
-                label.col-xs-3.control-label Group Name:
+                label.col-xs-3.control-label Name:
                 .col-xs-9
-                    input.form-control(type='text' ng-model='newGroupName' placeholder='Group Name' autofocus)
+                    input.form-control(type='text' ng-model='newGroup.name' placeholder='Group Name' autofocus)
+            .form-group
+                label.col-xs-3.control-label Description:
+                .col-xs-9
+                    textarea.form-control(rows='5' ng-model='newGroup.description' placeholder='Group Description')
             .form-group
                 label.col-xs-3.control-label Color:
                 .col-xs-9
                     color-picker(
-                        ng-model='selectedColour'
+                        ng-model='newGroup.colour'
                         color-picker-format="'hex'"
                         color-picker-alpha="false"
                         color-picker-swatch-only="true"
