--- a/views/partials/workspace.jade
+++ b/views/partials/workspace.jade
@@ -7,9 +7,8 @@ link(rel='stylesheet', href='/styles/workspace.css')
     input#showButton(type='button' value='Show' ng-hide='chatVisible' ng-click='chatVisible = !chatVisible')
     #chatPanel(ng-show='chatVisible')
         #chatHeader
-            button#hideButton(onclick='history.back()')
-                span(class='glyphicon glyphicon-menu-left')
-            button#hideButton(ng-click='chatVisible = !chatVisible') Hide
+            button.actionButton.glyphicon.glyphicon-home(ui-sref='home.groups')
+            button.actionButton(ng-click='chatVisible = !chatVisible') Hide
         #chatBody
             .messageRow(ng-show='messagesLoading')
                 .loadingDiv loading...
@@ -17,7 +16,7 @@ link(rel='stylesheet', href='/styles/workspace.css')
                 .userBubble.noselect(uib-tooltip='{{message._user.username}}' tooltip-placement='right' tooltip-trigger='mouseenter') {{message._user.username.substring(0, 1).toUpperCase()}}
                 .chatMessage(ng-bind='message.content')
                 button.btn.btn-primary(type='button' ng-click='addMessageToWorkspace(message.content)') +
-                button.btn.btn-primary(type='button' ng-if='message._user.username === user.username' ng-click='removeMessage(message._id)') x
+                button.btn.btn-primary(type='button' ng-if='message._user._id === user._id' ng-click='removeMessage(message._id)') x
         #chatFooter
             form(ng-submit='sendMessage()')
                 input#messageInputBox(type='text' ng-model='newMessage' placeholder='Type a message...' autofocus)
