--- a/views/partials/addGroupModal.jade
+++ b/views/partials/addGroupModal.jade
@@ -28,4 +28,4 @@
                     button.btn.btn-primary(type='submit') Add Group
 .modal-footer
     fieldset(ng-disabled='disableModal')
-        button.btn.btn-warning(type='button' ng-click='cancel()') Cancel
+        button.btn.btn-warning(ng-click='cancel()') Cancel
