--- a/views/partials/workspace.jade
+++ b/views/partials/workspace.jade
@@ -15,8 +15,8 @@ link(rel='stylesheet', href='/styles/workspace.css')
             .messageRow(ng-repeat='message in messages | orderBy: "date" track by $index')
                 .userBubble.noselect(uib-tooltip='{{message._user.username}}' tooltip-placement='right' tooltip-trigger='mouseenter') {{message._user.username.substring(0, 1).toUpperCase()}}
                 .chatMessage(ng-bind='message.content')
-                button.btn.btn-primary(type='button' ng-click='addMessageToWorkspace(message.content)') +
-                button.btn.btn-primary(type='button' ng-if='message._user._id === user._id' ng-click='removeMessage(message._id)') x
+                button.btn.btn-primary(ng-click='addMessageToWorkspace(message.content)') +
+                button.btn.btn-primary(ng-if='message._user._id === user._id' ng-click='removeMessage(message._id)') x
         #chatFooter
             form(ng-submit='sendMessage()')
                 input#messageInputBox(type='text' ng-model='newMessage' placeholder='Type a message...' autofocus)
