--- a/views/index.jade
+++ b/views/index.jade
@@ -27,6 +27,7 @@ html(ng-app='runwayApp')
         script(type='text/javascript', src='/socket.io/socket.io.js')
 
         script(type='text/javascript', src='/scripts/index.js')
+        script(type='text/javascript', src='/scripts/constants.js')
         script(type='text/javascript', src='/scripts/services.js')
         script(type='text/javascript', src='/scripts/controllers.js')
 
