--- a/views/index.jade
+++ b/views/index.jade
@@ -14,7 +14,7 @@ html(ng-app='runwayApp')
         script(type='text/javascript', src='/node_modules/angular/angular.min.js')
         script(type='text/javascript', src='/node_modules/jquery/dist/jquery.min.js')
 
-        script(type='text/javascript', src='/node_modules/angular-ui-bootstrap/ui-bootstrap-tpls.min.js')
+        script(type='text/javascript', src='/node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js')
         script(type='text/javascript', src='/node_modules/angular-ui-router-title/src/angular-ui-router-title.js')
         script(type='text/javascript', src='/node_modules/angular-ui-router/release/angular-ui-router.min.js')
         script(type='text/javascript', src='/node_modules/angularjs-color-picker/dist/angularjs-color-picker.js')
