--- a/views/index.jade
+++ b/views/index.jade
@@ -11,25 +11,8 @@ html(ng-app='runwayApp')
         link(rel='stylesheet', href='/styles/home.css')
         link(rel='stylesheet', href='/styles/settings.css')
 
-        script(type='text/javascript', src='/node_modules/angular/angular.min.js')
-        script(type='text/javascript', src='/node_modules/jquery/dist/jquery.min.js')
-
-        script(type='text/javascript', src='/node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js')
-        script(type='text/javascript', src='/node_modules/angular-ui-router-title/src/angular-ui-router-title.js')
-        script(type='text/javascript', src='/node_modules/angular-ui-router/release/angular-ui-router.min.js')
-        script(type='text/javascript', src='/node_modules/angularjs-color-picker/dist/angularjs-color-picker.js')
-        script(type='text/javascript', src='/node_modules/angularjs-color-picker/node_modules/tinycolor2/dist/tinycolor-min.js')
-        script(type='text/javascript', src='/node_modules/bootstrap/dist/js/bootstrap.min.js')
-        script(type='text/javascript', src='/node_modules/dropzone/dist/dropzone.js')
-        script(type='text/javascript', src='/node_modules/jquery-ui-bundle/jquery-ui.min.js')
-        script(type='text/javascript', src='/node_modules/jquery-ui-touch-punch/jquery.ui.touch-punch.min.js')
-
-        script(type='text/javascript', src='/socket.io/socket.io.js')
-
-        script(type='text/javascript', src='/scripts/index.js')
-        script(type='text/javascript', src='/scripts/constants.js')
-        script(type='text/javascript', src='/scripts/services.js')
-        script(type='text/javascript', src='/scripts/controllers.js')
+        script(type='text/javascript', src='/scripts/vendor.min.js')
+        script(type='text/javascript', src='/scripts/index.min.js')
 
         title(ng-bind='("Runway - " + $title || "Runway")')
         base(href='/')
