--- a/views/partials/login.jade
+++ b/views/partials/login.jade
@@ -12,4 +12,4 @@
             .form-group
                 p.col-xs-7 Need an account?
                     a(ui-sref='register') Signup
-                button.btn.btn-primary.col-xs-4#signInButton(type='submit') Login
+                button.btn.btn-primary.col-xs-4.signInButton(type='submit') Login
