--- a/views/partials/register.jade
+++ b/views/partials/register.jade
@@ -25,4 +25,4 @@
             .form-group
                 .col-xs-7 Already have an account?
                     a(ui-sref='login') Login
-                button.btn.btn-primary.col-xs-4#signInButton(type='submit') Register
+                button.btn.btn-primary.col-xs-4.signInButton(type='submit') Register
