--- a/client/styles/home.css
+++ b/client/styles/home.css
@@ -1,5 +1,5 @@
 /*nav bar*/
-img.logo {
+.logo {
     margin-top: -12px;
     margin-left: -5px;
     max-height: 45px;
@@ -18,32 +18,24 @@ img.logo {
 
 @media only screen and (min-width: 400px) {
     .tilePanel {
-        -moz-column-count: 1;
-        -webkit-column-count: 1;
         column-count: 1;
     }
 }
 
 @media only screen and (min-width: 700px) {
     .tilePanel {
-        -moz-column-count: 2;
-        -webkit-column-count: 2;
         column-count: 2;
     }
 }
 
 @media only screen and (min-width: 900px) {
     .tilePanel {
-        -moz-column-count: 3;
-        -webkit-column-count: 3;
         column-count: 3;
     }
 }
 
 @media only screen and (min-width: 1100px) {
     .tilePanel {
-        -moz-column-count: 4;
-        -webkit-column-count: 4;
         column-count: 4;
     }
 }
@@ -54,14 +46,14 @@ img.logo {
 }
 
 
-.tilePanel.header > div {
+.tilePanelHeader > div {
     font-size: 24pt;
     text-align: left;
     margin-top: 5px;
     margin-bottom: 5px;
 }
 
-input.filterInput {
+.filterInput {
     margin-top: 4px;
 }
 
@@ -87,12 +79,12 @@ input.filterInput {
 
 .tilePanel > div:hover > div {
     transform: translate(0px, -15px);
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 5px 2px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0 5px 5px 2px;
     opacity: 0.8;
     transition: 0.5s;
 }
 
-.tilePanel > div > div > h2 {
+.tilePanel > div > div > .groupName {
     word-wrap: break-word;
 }
 /*end tilePanel*/
