--- a/views/index.jade
+++ b/views/index.jade
@@ -1,18 +1,14 @@
 doctype html
 html(ng-app='runwayApp')
     head
-        link(rel='stylesheet', href='/node_modules/bootstrap/dist/css/bootstrap.min.css')
-        link(rel='stylesheet', href='/node_modules/jquery-ui-bundle/jquery-ui.min.css')
-        link(rel='stylesheet', href='/node_modules/angularjs-color-picker/dist/angularjs-color-picker.min.css')
-        link(rel='stylesheet', href='/node_modules/angularjs-color-picker/dist/themes/angularjs-color-picker-bootstrap.min.css')
 
-        link(rel='stylesheet', href='/styles/style.css')
-        link(rel='stylesheet', href='/styles/login.css')
-        link(rel='stylesheet', href='/styles/home.css')
-        link(rel='stylesheet', href='/styles/settings.css')
+        link(rel='stylesheet', href='/node_modules/bootstrap/dist/css/bootstrap.min.css')
+
+        link(rel='stylesheet', href='/styles/vendor.min.css')
+        link(rel='stylesheet', href='/styles/styles.min.css')
 
         script(type='text/javascript', src='/scripts/vendor.min.js')
-        script(type='text/javascript', src='/scripts/index.min.js')
+        script(type='text/javascript', src='/scripts/scripts.min.js')
 
         title(ng-bind='("Runway - " + $title || "Runway")')
         base(href='/')
