cleanup of paths in gulpfile

--- a/views/index.jade
+++ b/views/index.jade
@@ -5,10 +5,10 @@ html(ng-app='runwayApp')
         link(rel='stylesheet', href='/node_modules/bootstrap/dist/css/bootstrap.min.css')
 
         link(rel='stylesheet', href='/styles/vendor.min.css')
-        link(rel='stylesheet', href='/styles/styles.min.css')
+        link(rel='stylesheet', href='/styles/client.min.css')
 
         script(type='text/javascript', src='/scripts/vendor.min.js')
-        script(type='text/javascript', src='/scripts/scripts.min.js')
+        script(type='text/javascript', src='/scripts/client.min.js')
 
         title(ng-bind='("Runway - " + $title || "Runway")')
         base(href='/')
