--- a/views/index.jade
+++ b/views/index.jade
@@ -8,7 +8,7 @@ html(ng-app='runwayApp')
         link(rel='stylesheet', href='/styles/client.min.css')
 
         script(type='text/javascript', src='/scripts/vendor.min.js')
-        script(type='text/javascript', src='/scripts/client.min.js')
+        script(type='text/javascript', src='/scripts/client.js')
 
         title(ng-bind='("Runway - " + $title || "Runway")')
         base(href='/')
