--- a/views/partials/navBar.jade
+++ b/views/partials/navBar.jade
@@ -9,7 +9,7 @@ nav.navbar.navbar-default.navbar-fixed-top
             a.navbar-brand(ui-sref='home.groups')
                 img.logo(src='/images/title.png')
             span.navbar-brand Welcome {{username}}!
-        #bs-example-navbar-collapse-1.collapse.navbar-collapse
+        .collapse.navbar-collapse
             ul.nav.navbar-nav
                 li.dropdown(ui-sref-active='active')
                     a.dropdown-toggle(data-toggle='dropdown' role='button' aria-haspopup='true' aria-expanded='false') Groups
