fixed issue with deleting groups throwing an auth error and alert.  also blocked non-owners from seeing the delete group button

--- a/views/partials/editGroupPropertiesModal.jade
+++ b/views/partials/editGroupPropertiesModal.jade
@@ -27,5 +27,5 @@ form(ng-submit='editGroup()')
     .modal-footer
         fieldset(ng-disabled='disableModal')
             button.btn.btn-primary(type='submit') Edit Group
-            button.btn.btn-danger(ng-click='delete()') Delete
+            button.btn.btn-danger(ng-click='delete()' ng-show='canDelete') Delete
             button.btn.btn-warning(ng-click='cancel()') Cancel
