--- a/views/partials/editGroupMembersModal.jade
+++ b/views/partials/editGroupMembersModal.jade
@@ -19,7 +19,7 @@
                                 td.col-xs-3(ng-bind='member.lastName')
                                 td.col-xs-4(ng-bind='member.username')
                                 td.col-xs-2
-                                    div.btn.btn-xs.btn-danger(ng-click='deleteMember(member)' ng-hide='member.username === owner.username') Remove
+                                    div.btn.btn-xs.btn-danger(ng-click='deleteMember(member)' ng-hide='member.username === owner.username || !canDelete') Remove
                                     div(ng-show='member.username === owner.username') Owner
 
                     form.col-xs-12(ng-submit='addMember()')
