--- a/views/partials/navBar.pug
+++ b/views/partials/navBar.pug
@@ -28,4 +28,4 @@ nav.navbar.navbar-default.navbar-fixed-top
                             a(ui-sref='home.settings.general') Account Settings
                         li.divider
                         li
-                            a(ui-sref='login') Logout
+                            a(href='' ng-click='logout()') Logout
